--- a/Monitoring system/nbproject/project.properties
+++ b/Monitoring system/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/data_str.jar
+dist.jar=${dist.dir}/monitoring_system.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/data_str
+dist.jlink.output=${dist.jlink.dir}/monitoring_system
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=data_str
-main.class=ArrayExercises_lab1
+jlink.launcher.name=monitoring_system
+main.class=b0a12195_2106122_program1.B0A12195_2106122_Program1
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
